--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "uds_windows"
-version = "0.1.0"
+version = "0.1.1"
 license = "MIT"
 authors = ["Azure IoT Edge Devs", "Harald Hoyer <harald@redhat.com>"]
 description = "Unix Domain Sockets for Windows!"
-repository = "https://github.com/haraldh/uds_windows"
-# readme = "README"
+repository = "https://github.com/haraldh/rust_uds_windows"
+readme = "README.md"
 # keywords = ""
 # categories = ""
 exclude = [".gitignore"]
