--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "uds_windows"
-version = "1.0.1"
+version = "1.0.2-alpha.0"
 license = "MIT"
 authors = ["Azure IoT Edge Devs", "Harald Hoyer <harald@redhat.com>"]
 description = "Unix Domain Sockets for Windows!"
